# FriFlash

./: .gitignore  CLAUDE.md  FriFlash_BRD.docx  FriFlash_FRD.docx  README.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  pyproject.toml  railway.toml  seed.py
apps/api/app/: main.py
apps/api/app/api/v1/: auth.py  decks.py  imports.py  share.py  stats.py  study.py  words.py
apps/api/app/core/: config.py  deps.py  security.py
apps/api/app/db/: session.py
apps/api/app/db/models/: __init__.py  deck.py  study_session.py  user.py  word.py
apps/api/app/schemas/: auth.py  deck.py  import_.py  stats.py  study.py  word.py
apps/api/app/services/: deck.py  import_.py  stats.py  study.py  word.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial_schema.py  002_sm2_and_sharing.py
apps/web/: README.md  index.html  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
apps/web/e2e/: auth.spec.ts  deck-crud.spec.ts  share-deck.spec.ts  study-flow.spec.ts  tts.spec.ts
apps/web/e2e/helpers/: auth.ts
apps/web/public/: manifest.webmanifest
apps/web/src/: App.tsx  index.css  main.tsx  router.tsx
apps/web/src/components/: ProtectedRoute.tsx
apps/web/src/hooks/: useDecks.ts  useImport.ts  usePWAInstall.ts  useStats.ts  useStudy.ts  useWords.ts
apps/web/src/lib/: api.ts  decks.ts  import.ts  messages.ts  queryClient.ts  stats.ts  study.ts  words.ts
apps/web/src/pages/: AuthPage.tsx  DecksPage.tsx  SharedDeckPage.tsx  StatsPage.tsx  StudyPage.tsx  WordsPage.tsx
apps/web/src/types/: api.ts
k6/: load.js  smoke.js
(+22 files in other folders)
